--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/node": "^5.0.1",
     "@astrojs/solid-js": "^2.0.0",
     "@astrojs/tailwind": "^3.0.0",
+    "@astrojs/vercel": "^3.0.0",
     "@babel/core": "^7.20.12",
     "astro": "^2.0.2",
     "lunr": "^2.3.9",
